# Tardigrade

./: .gitignore  CMakeLists.txt  README.md  Tardigrade.sln  build.sh
API_References/: activation.md  concept.md  dataloader.md  layer.md  loss.md  model.md  optimizer.md  tensor.md
Tardigrade/: Activation.cpp  Activation.hpp  Autograd.cpp  Autograd.hpp  AutogradLayer.cpp  AutogradLayer.hpp  AutogradNodes.hpp  DataLoader.cpp  DataLoader.hpp  Layer.cpp  Layer.hpp  Loss.cpp  Loss.hpp  Metric.cpp  Metric.hpp  Model.cpp  Model.hpp  Optimizer.cpp  Optimizer.hpp  Storage.hpp  Tardigrade.vcxproj  Tardigrade.vcxproj.filters  Tensor.hpp  Types.hpp  main.cpp
Tardigrade/tensor/: Autograd.cpp  Autograd.hpp  AutogradNodes.hpp  Tensor.cpp  Tensor.hpp
Tardigrade/x64/Debug/: Tardigrade.exe.recipe  Tardigrade.ilk  vc143.idb
Tardigrade/x64/Debug/Tardigrade.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tardigrade.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tardigrade/x64/Release/: Tardigrade.exe.recipe  Tardigrade.iobj  Tardigrade.ipdb
Tardigrade/x64/Release/Tardigrade.tlog/: CL.command.1.tlog  CL.write.1.tlog  Tardigrade.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
